<resources>
    <string name="under_development">Under Development</string>
    <string name="facebook_app_id">208951490249763</string>
    <string name="tokenization_key_value">production_pg944w7f_89rh29ccqj8qgpt9</string>
    <string name="app_name">TLN</string>
    <string name="app_name_full">Tennis League Network, llc</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="hint_username">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_curr_email">Current Email Address</string>
    <string name="hint_new_email">New Email Address</string>
    <string name="hint_confirm_email">Confirm Email Address</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_zipcode">Zip Code</string>
    <string name="hint_zipcode_court_name">Zip Code/Court Name</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_fav_player">Favorite Player</string>
    <string name="hint_street">Street Address</string>
    <string name="hint_city">City</string>
    <string name="hint_curr_passwd">Current Password</string>
    <string name="hint_new_passwd">New Password</string>
    <string name="hint_curr_name">Current Name</string>
    <string name="hint_proposed_name">Proposed Name</string>
    <string name="hint_proposed_fname">Proposed First Name</string>
    <string name="hint_proposed_lname">Proposed Last Name</string>
    <string name="hint_how_find_us">How did you find us?</string>
    <string name="hint_birth_range">Birth Month/Year (For 40/55+ tennis leagues)</string>
    <string name="hint_birth_txt">Month - Year</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_forgot_pass">Forgot Password?</string>
    <string name="btn_submit">Submit</string>
    <string name="submit_score">Submit Score</string>
    <string name="btn_next">Next</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_update">Update</string>
    <string name="btn_send_mail">Send Email</string>
    <string name="btn_send_sms">Send Text</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_show_pwd">Show</string>
    <string name="txt_hide_pwd">Hide</string>
    <string name="txt_participant">Are you currently a participant in the network?</string>
    <string name="txt_use_website_login">Use your website login here.</string>
    <string name="txt_not_a_member">Not a member?</string>
    <string name="txt_create_account">Create an account</string>
    <string name="txt_provide_below_info">Please provide information below</string>
    <string name="txt_under_construction">Page Under Construction</string>
    <string name="txt_user_level">Preferred Level</string>
    <string name="txt_ntrp_rating">NTRP Rating</string>
    <string name="txt_join_doubles">Joining Doubles</string>
    <string name="txt_partners_preferred_level">Partner\'s Preferred Level</string>
    <string name="txt_partners_first_name">Partner\'s First Name</string>
    <string name="txt_partners_last_name">Partner\'s Last Name</string>
    <string name="txt_partners_email">Partner\'s Email</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_full_name">Name</string>
    <string name="txt_address">Address</string>
    <string name="txt_state">State</string>
    <string name="txt_preferred_home_court">Preferred Home Court</string>
    <string name="txt_age_range">Birth Month/Year</string>
    <string name="txt_age_range_hint">(For 40/55+ tennis leagues)</string>
    <string name="text_age_range_default">Month Year</string>
    <string name="txt_playoff_notifier">Playoff Notifier</string>
    <string name="txt_datTime_notifier">Can play during "9-5" workday</string>
    <string name="txt_ladder_notifier">Ladder Notifier</string>
    <string name="txt_division_score_notifier">Division Score Notifier</string>
    <string name="txt_score_notification">Score Notification</string>
    <string name="txt_can_play_workday">Can play during “9&#8211;5” workday</string>
    <string name="facebook_sharing">Facebook Sharing</string>
    <string name="txt_details">Details</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="email_league_invitation_subject">%1$s %2$s League Invitation from %3$s</string>
    <string name="email_league_invitation_body">&lt;p>Hello %1$s,&lt;/p>&lt;p>We are looking to meet up to PLAY A %2$s LEAGUE MATCH.&lt;/p>&lt;p>We prefer to play at %3$s, but we are willing to work with you on playing location.&lt;/p>&lt;p>We are available to play during %4$s.&lt;/p>&lt;p>We look forward to meeting up with you on the tennis courts!&lt;/p></string>
    <string name="email_league_invitation_player_message">&lt;p>Message from Player: &lt;br/>&lt;table width="100%%" cellpadding="5">&lt;tr>&lt;td bgcolor="#F0F3FF" >&lt;b>%1$s&lt;/b>&lt;/td>&lt;/tr>&lt;/table>&lt;/p></string>
    <string name="email_league_invitation_player_info">&lt;p>- Player Details&lt;br/>&lt;b>%1$s&lt;br/>%2$s&lt;br/>%3$s&lt;br/>&lt;/b>&lt;/p></string>
    <string name="sms_league_invitation_body">Hello %1$s, \n\nWe are looking to meet up to PLAY A %2$s LEAGUE MATCH.
        \n\nWe prefer to play at %3$s, but we are willing to work with you on playing location.\n\nWe are available to play during %4$s.
        \n\nWe look forward to meeting up with you on the tennis courts!\n\n</string>
    <string name="sms_league_invitation_player_message">Message from Player: %1$s\n\n</string>
    <string name="sms_league_invitation_player_info">Player Details \n%1$s\n%2$s\n%3$s</string>
    <string name="email_partner_invitation_subject">%1$s Partner Program Invitation from %2$s</string>
    <string name="email_partner_invitation_body">&lt;p>Hello %1$s,&lt;/p>&lt;p>We are looking to meet up to %2$s.&lt;/p>&lt;p>We prefer to play at %3$s, but we are willing to work with you on playing location.&lt;/p>&lt;p>We are available to play during %4$s.&lt;/p>&lt;p>We look forward to meeting up with you on the tennis courts!&lt;/p></string>
    <string name="email_partner_invitation_player_message">&lt;p>Message from Player: &lt;br/>&lt;table width="100%%" cellpadding="5">&lt;tr>&lt;td bgcolor="#F0F3FF" >&lt;b>%1$s&lt;/b>&lt;/td>&lt;/tr>&lt;/table>&lt;/p></string>
    <string name="email_partner_invitation_player_info">&lt;p>- Player Details&lt;br/>&lt;b>%1$s&lt;br/>%2$s&lt;br/>%3$s&lt;br/>&lt;/b>&lt;/p></string>
    <string name="sms_partner_invitation_body">Hello %1$s \n\nI am looking to meet up to %2$s.\n\nI prefer to play at %3$s,
        but I am willing to work with you on playing location.\n\nI am available to play during %4$s.\n\n
        I look forward to meeting up with you on the tennis courts!.\n\n</string>
    <string name="sms_partner_invitation_player_message">Message from Player: %1$s\n\n</string>
    <string name="sms_partner_invitation_player_info">Player Details : \n%1$s\n%2$s\n%3$s</string>
    <string name="email_ladder_invitation_subject">%1$s Tennis Ladder Invitation from %2$s</string>
    <string name="email_support_subject">%1$s has sent this message</string>
    <string name="email_support_body">&lt;p>Player\'s Name: %1$s &lt;/p>&lt;p>City: %2$s&lt;/p>&lt;p>Players email: %3$s&lt;/p>&lt;p>Subject: %4$s&lt;/p>&lt;p>Message: %5$s&lt;/p></string>
    <string name="alert_msg_league_no_data_found">We currently don\'t have you enrolled in the current or future seasons. Join Today to enroll.</string>
    <string name="alert_msg_tournament_no_data_found">We don\'t currently have you enrolled in any upcoming Tournaments. Do you want to sign up for one?</string>
    <string name="alert_msg_select_a_competition">Please select a competition</string>
    <string name="page_partner_program">Partner Program</string>
    <string name="alert_msg_please_wait">Please wait...</string>
    <string name="alert_msg_current_loc_not_found">Unable to get current location. Please try after some time.</string>
    <string name="txt_courts_lading_msg">Try searching a court either by your current location or zipcode."</string>
    <string name="network_error">Please Check your internet Connection.</string>
    <string name="please_select_future_date">Please select future date.</string>
    <string name="title_activity_maps">Map</string>
    <string name="alert_msg_current_loc_not_found1">Unable to get current location. Please try after some time.Unable to get current location. Please try after some time.
    Unable to get current location. Please try after some time.Unable to get current location. Please try after some time.Unable to get current location. Please try after some time.
    Unable to get current location. Please try after some time.</string>
    <string name="invalid_score_card">Winner should be at top.</string>
    <string name="max_user_selected">Youu can select only five members at the same time.</string>
    <string name="poty_title">Players Of The Year </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banned_text">Sorry you are currently banned from participating in this organization. If you think this is in error you can send the admin staff an email.</string>
    <string name="referral_text1">Did you know you get a 33 discount off your next seasons if a new referral joins the league? \n If 3 referrals joins you\'ll get a FREE season.</string>
    <string name="referral_text4">We have 3 ways to REFER players to the program: </string>
    <string name="share_referral_link">1) Share Your Referral Link</string>
    <string name="share_referral_link_text">Share your referral link to your tennis friends and if they use it they\'ll be marked as your referral. \nHere\'s your unique referral url that you can share anywhere!</string>
    <string name="refer_friend_page">2) REFER A FRIEND PAGE</string>
    <string name="refer_friend_page_text">Use the REFER A FRIEND page and we\'ll send them an email in your name.</string>
    <string name="share_referral_code">3) Share Your Referral Code</string>
    <string name="share_referral_code_text">Share your referral code to your tennis friends and if they sign up with your code they\'ll be marked as your referral. \nHere\'s your unique referral code that you can share anywhere!</string>
    <string name="click_here">Click Here</string>
    <string name="select_city">Choose a city</string>
    <string name="text_submit_score">Submit Score</string>
    <string name="text_my_leagues">My Leagues</string>
    <string name="text_partner_program">Partner Program</string>
    <string name="text_tennis_ladder">Tennis Ladder</string>
    <string name="text_courts">Courts</string>
    <string name="text_my_tournies">My Tournaments</string>
    <string name="text_join_today">Join Today</string>
    <string name="text_customer_support">Customer Support</string>
    <string name="text_upcoming_programs">Upcoming Programs</string>
    <string name="text_my_profile">My Profile</string>
    <string name="text_latest_score">Latest Score</string>
    <string name="text_player_of_the_year_poty">Players Of The Year(POTY)</string>
    <string name="text_utr">UTR</string>
    <string name="text_score">Score</string>
    <string name="champion">CHAMPION</string>
    <string name="street_address">Street Address</string>
    <string name="do_you_want_us_to_mail_you_business_cards_to_hand_out_to_your_tennis_contacts">Do you want us to mail you business cards to hand out to your tennis contacts?</string>
    <string name="how_many_should_we_mail_you">How many should we mail you?</string>
    <string name="city_state_zip_code">City, State Zip Code</string>
</resources>