<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="outsideOverlay"
    tools:context="com.tennisdc.tln.modules.profile.FragUpdateProfileDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            style="@style/label_text_view"
            android:text="@string/hint_mobile_number"/>
        <EditText
            android:id="@+id/edt_Mobile"
            style="@style/gray_edit_text"
            android:ems="10"
            android:hint="@string/hint_mobile_number"
            android:inputType="phone"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchBtn_playOff_notifier"
            android:layout_width="match_parent"
            android:checked="false"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_playoff_notifier" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchBtn_ladder_notifier"
            android:layout_width="match_parent"
            android:checked="false"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_ladder_notifier" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchBtn_division_score_notifier"
            android:layout_width="match_parent"
            android:checked="false"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_division_score_notifier" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchBtn_playWorkDay"
            android:layout_width="match_parent"
            android:checked="false"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_can_play_workday" />

        <TextView
            style="@style/label_text_view"
            android:text="@string/hint_street" />
        <EditText
            android:id="@+id/edt_street"
            style="@style/gray_edit_text"
            android:hint="@string/hint_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/label_text_view"
            android:text="@string/hint_city" />
        <EditText
            android:id="@+id/edt_city"
            style="@style/gray_edit_text"
            android:hint="@string/hint_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/label_text_view"
            android:text="@string/txt_state"/>
        <Spinner
            android:id="@+id/spnrState"
            style="@style/gray_spinner_bg"/>

        <TextView
            style="@style/label_text_view"
            android:text="@string/txt_preferred_home_court"/>
        <Spinner
            android:id="@+id/spnrPreferredHomeCourt"
            style="@style/gray_spinner_bg"/>

        <TextView
            style="@style/label_text_view"
            android:text="@string/txt_age_range"/>
        <Spinner
            android:id="@+id/spnrAgeRange"
            style="@style/gray_spinner_bg"/>

        <TextView
            style="@style/label_text_view"
            android:text="@string/hint_fav_player"/>
        <Spinner
            android:id="@+id/spnrFavPlayer"
            style="@style/gray_spinner_bg"/>

        <Button
            android:id="@+id/btnUpdate"
            style="@style/transparent_button"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/btn_update"/>

    </LinearLayout>
</ScrollView>