<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.tennisdc.tln.modules.register.FragRegisterStep2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/txt_provide_below_info"
            style="@style/sub_header"/>

        <TextView
            style="@style/label_text_view"
            android:text="@string/hint_mobile_number"/>

        <EditText
            android:id="@+id/edtMobile"
            style="@style/gray_edit_text"
            android:hint="@string/hint_mobile_number"/>

        <TextView
            style="@style/label_text_view"
            android:text="@string/hint_birth_range"/>

        <EditText
            android:id="@+id/birthRange"
            style="@style/gray_edit_text"
            android:ems="10"
            android:hint="@string/hint_birth_txt"
            android:focusable="false"
            android:descendantFocusability="blocksDescendants"
            android:inputType="none"/>

        <TextView
            style="@style/label_text_view"
            android:text="@string/txt_user_level"/>

        <Spinner
            android:id="@+id/spnrPreferredLevel"
            style="@style/gray_spinner_bg"/>

        <TextView
            style="@style/label_text_view"
            android:visibility="gone"
            android:text="@string/txt_ntrp_rating"/>

        <Spinner
            android:id="@+id/spnrUstaLevel"
            android:visibility="gone"
            style="@style/gray_spinner_bg"/>

        <TextView
            style="@style/label_text_view"
            android:text="@string/hint_how_find_us"/>

        <EditText
            android:id="@+id/edtHowFindUs"
            style="@style/gray_edit_text"
            android:hint="@string/hint_how_find_us" />

        <TextView
            style="@style/label_text_view"
            android:visibility="gone"
            android:text="@string/txt_join_doubles"/>

        <Spinner
            android:id="@+id/spnrJoinDoubles"
            android:visibility="gone"
            style="@style/gray_spinner_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayoutPartnersPreferredLevel">

            <TextView
                style="@style/label_text_view"
                android:text="@string/txt_partners_preferred_level"/>

            <Spinner
                android:id="@+id/spnrPartnersPreferredLevel"
                style="@style/gray_spinner_bg"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayoutHavePartner">

            <TextView
                style="@style/label_text_view"
                android:text="@string/txt_partners_first_name"/>

            <EditText
                android:id="@+id/edtPartnersFN"
                style="@style/gray_edit_text"
                android:inputType="textPersonName"
                android:hint="@string/txt_partners_first_name" />

            <TextView
                style="@style/label_text_view"
                android:text="@string/txt_partners_last_name" />

            <EditText
                android:id="@+id/edtPartnersLName"
                style="@style/gray_edit_text"
                android:hint="@string/txt_partners_last_name"
                android:inputType="textPersonName" />

            <TextView
                style="@style/label_text_view"
                android:text="@string/txt_partners_email" />

            <EditText
                android:id="@+id/edtPartnersEmail"
                style="@style/gray_edit_text"
                android:hint="@string/txt_partners_email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_termsNConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtTermsNCond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp" />

            <TextView
                android:id="@+id/linkTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textColor="@color/link_normal" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            style="@style/transparent_button"
            android:layout_marginTop="@dimen/button_margin_top"
            android:background="@color/purple"
            android:textColor="@android:color/white"
            android:text="@string/btn_submit"/>

    </LinearLayout>

</ScrollView>
