<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/txt_participant"
            style="@style/heading"/>

        <!--<TextView
            style="@style/sub_header"
            android:text="@string/txt_use_website_login"/>-->

        <EditText
            android:layout_marginTop="25dp"
            android:id="@+id/edtUsername"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_username"
            style="@style/gray_edit_text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtPassword"
                style="@style/gray_edit_text"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="30" />

            <TextView
                android:id="@+id/txtViewShow"
                android:text="@string/txt_show_pwd"
                android:layout_alignEnd="@+id/edtPassword"
                android:layout_alignRight="@+id/edtPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:paddingTop="5dp"
                android:layout_marginRight="30dp"
                android:textColor="@color/link_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/gray_button"
            android:text="@string/btn_login"/>

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_forgot_pass"
            android:layout_gravity="end"
            android:background="@null"
            android:textColor="@color/link_text"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_not_a_member"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/purple"
            android:textColor="@android:color/white"
            android:text="@string/btn_register"/>

    </LinearLayout>

        </RelativeLayout>
</ScrollView>
