<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="outsideOverlay"
    tools:context="com.tennisdc.tln.modules.profile.FragUpdateProfileName">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            style="@style/label_text_view"
            android:text="@string/hint_curr_name" />
        <TextView
            android:id="@+id/edt_curr_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/gray_edit_text"
            android:hint="@string/hint_curr_name"
            android:alpha="0.5"
            android:inputType="textPersonName"/>

        <TextView
            style="@style/label_text_view"
            android:text="@string/hint_proposed_name" />
        <EditText
            android:id="@+id/edt_proposed_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/gray_edit_text"
            android:hint="@string/hint_proposed_fname"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/edt_proposed_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/gray_edit_text"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_proposed_lname"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/btnUpdateName"
            style="@style/transparent_button"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/btn_update"/>


    </LinearLayout>
</ScrollView>

